--- a/TideMediaPlayer/TideMediaPlayer.vcxproj.filters
+++ b/TideMediaPlayer/TideMediaPlayer.vcxproj.filters
@@ -35,12 +35,6 @@
     <ClCompile Include="TideMediaPlayer.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <None Include="TideMediaPlayer.ico">
-      <Filter>Resource Files</Filter>
-    </None>
-    <ResourceCompile Include="TideMediaPlayer.rc">
-      <Filter>Resource Files</Filter>
-    </ResourceCompile>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp">
@@ -49,10 +43,37 @@
     <ClCompile Include="TideMediaHandle.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="AboutDialog.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="TideMediaHandle.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="resource.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+  </ItemGroup>
+  <ItemGroup>
+    <QtMoc Include="AboutDialog.h">
+      <Filter>Header Files</Filter>
+    </QtMoc>
+  </ItemGroup>
+  <ItemGroup>
+    <ResourceCompile Include="TideMediaPlayer.rc">
+      <Filter>Resource Files</Filter>
+    </ResourceCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <Image Include="Icons\TideMediaPlayer128.ico">
+      <Filter>Resource Files</Filter>
+    </Image>
+    <Image Include="Icons\TideMediaPlayerLogo24.ico">
+      <Filter>Resource Files</Filter>
+    </Image>
+    <Image Include="Icons\TideMediaPlayerLogo.png">
+      <Filter>Resource Files</Filter>
+    </Image>
   </ItemGroup>
 </Project>
