修复上次提交提到的问题，使用OpenGL

--- a/TideMediaPlayer/TideMediaPlayer.vcxproj.filters
+++ b/TideMediaPlayer/TideMediaPlayer.vcxproj.filters
@@ -46,6 +46,9 @@
     <ClCompile Include="AboutDialog.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="WidgetStageGL.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="TideMediaHandle.h">
@@ -57,6 +60,9 @@
   </ItemGroup>
   <ItemGroup>
     <QtMoc Include="AboutDialog.h">
+      <Filter>Header Files</Filter>
+    </QtMoc>
+    <QtMoc Include="WidgetStageGL.h">
       <Filter>Header Files</Filter>
     </QtMoc>
   </ItemGroup>
@@ -75,5 +81,8 @@
     <Image Include="Icons\TideMediaPlayerLogo.png">
       <Filter>Resource Files</Filter>
     </Image>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="packages.config" />
   </ItemGroup>
 </Project>
