创建设置窗口 调整关于窗口分辨率

--- a/TideMediaPlayer/TideMediaPlayer.vcxproj
+++ b/TideMediaPlayer/TideMediaPlayer.vcxproj
@@ -101,9 +101,11 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="DialogSetting.cpp" />
     <ClCompile Include="ImageButton.cpp" />
     <ClCompile Include="WidgetStageGL.cpp" />
     <QtRcc Include="TideMediaPlayer.qrc" />
+    <QtUic Include="DialogSetting.ui" />
     <QtUic Include="TideMediaPlayer.ui" />
     <QtMoc Include="TideMediaPlayer.h" />
     <ClCompile Include="AboutDialog.cpp" />
@@ -113,6 +115,7 @@
   </ItemGroup>
   <ItemGroup>
     <QtMoc Include="ImageButton.h" />
+    <QtMoc Include="DialogSetting.h" />
     <ClInclude Include="resource.h" />
     <QtMoc Include="WidgetStageGL.h" />
     <QtMoc Include="AboutDialog.h" />
