--- a/TideMediaPlayer/TideMediaPlayer.vcxproj
+++ b/TideMediaPlayer/TideMediaPlayer.vcxproj
@@ -123,7 +123,7 @@
     <ClInclude Include="resource.h" />
     <QtMoc Include="WidgetStageGL.h" />
     <QtMoc Include="AboutDialog.h" />
-    <ClInclude Include="TideMediaHandle.h" />
+    <QtMoc Include="TideMediaHandle.h" />
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="TideMediaPlayer.rc" />
