--- a/TideMediaPlayer/TideMediaPlayer.vcxproj.filters
+++ b/TideMediaPlayer/TideMediaPlayer.vcxproj.filters
@@ -60,9 +60,6 @@
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="TideMediaHandle.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
     <ClInclude Include="resource.h">
       <Filter>Header Files</Filter>
     </ClInclude>
@@ -81,6 +78,9 @@
       <Filter>Header Files</Filter>
     </QtMoc>
     <QtMoc Include="DialogSetting.h">
+      <Filter>Header Files</Filter>
+    </QtMoc>
+    <QtMoc Include="TideMediaHandle.h">
       <Filter>Header Files</Filter>
     </QtMoc>
   </ItemGroup>
