--- a/TideMediaPlayer/TideMediaPlayer.vcxproj
+++ b/TideMediaPlayer/TideMediaPlayer.vcxproj
@@ -60,8 +60,8 @@
   </ImportGroup>
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Debug|x64'">
-    <IncludePath>ffmpeg\include;$(IncludePath)</IncludePath>
-    <LibraryPath>ffmpeg\lib;$(LibraryPath)</LibraryPath>
+    <IncludePath>soundtouch\include;ffmpeg\include;$(IncludePath)</IncludePath>
+    <LibraryPath>soundtouch\lib;ffmpeg\lib;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Release|x64'">
     <IncludePath>ffmpeg\include;$(IncludePath)</IncludePath>
